Fix layout on mobile screens.

--- a/assets/css/search.css
+++ b/assets/css/search.css
@@ -89,4 +89,7 @@
   .layout {
     width: min-content;
   }
+  .results {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
